--- a/app/config.json
+++ b/app/config.json
@@ -16,8 +16,14 @@
     "DefaultLon":"-115.149411"
   },
   "env:development": {},
-  "env:test": {},
-  "env:production": {},
+  "env:test": {
+	"ApiBaseUri": "http://ris.southernnevadahealthdistrict.org/",
+    "InternalApiBaseUri": "https://api.southernnevadahealthdistrict.org/"
+  },
+  "env:production": {
+  	"ApiBaseUri": "http://ris.southernnevadahealthdistrict.org/",
+    "InternalApiBaseUri": "https://api.southernnevadahealthdistrict.org/"
+	},
   "os:android": {},
   "os:blackberry": {},
   "sourcemap": false,
